fixing a bunch of spacing stuff with titles

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,16 +31,14 @@
     color: #000000;
 }
 
-.writing-header {
+.writing-title {
     position: absolute;
     width: 350px;
     left: calc(50% - 350px/2);
     top: 100px;
     margin-bottom: 0;
     margin-top: 0;    
-}
 
-.writing-title {
     font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -60,13 +58,34 @@
     color: #C4C4C4;
 }
 
-.writing-body-text {  
+#writing-body-text-medium-title {
+    top: 220px;
+}
+
+#writing-body-text-short-title {  
+
+    top: 180px;
+
+    /* position: absolute;
+    width: 350px;
+    left: calc(50% - 350px/2);
+    margin-top: 0;
+    margin-bottom: 20px;
+
     font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 22px;
+
+    color: #000000; */
+    
+    /* font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
 
-    color: #000000;
+    color: #000000; */
 }
 
 .writing-section-lead {
@@ -103,7 +122,7 @@
 }
 
 #start-here-text {
-    top: 160px;
+    top: 180px;
 }
 
 .writing-date-color {
